# wsi-reader

./: README.md  pyproject.toml
wsi_reader/: __init__.py  base.py
wsi_reader/backends/: openslide.py  philips.py  tifffile.py
