[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wsi-reader"
version = "0.1.0"
readme = "README.md"
packages = ["wsi_reader"]
python_requires = ">= 3.8"
dependencies = [
    "numpy >= 1.22.0",
    "opencv-python-headless >= 4.7.0.68",
]

[project.optional-dependencies]
philips = [
    "pixelengine >= 3.1.3",
    "softwarerenderbackend >= 3.1.3",
    "softwarerendercontext >= 3.1.3",
]
tifffile = ["tifffile >= 2023.4.12", "zarr >= 2.16.1"]
openslide = ["openslide-python >= 1.1.1"]

[project.urls]
Repository = "https://github.com/stefano-malacrino/wsi-reader"