[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wsi-reader"
version = "0.1.0"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "numpy >= 1.22.0",
    "opencv-python-headless >= 4.7.0.68",
]

[project.optional-dependencies]
philips = [
    "pixelengine >= 3.1.3",
    "softwarerenderbackend >= 3.1.3",
    "softwarerendercontext >= 3.1.3",
]
tifffile = ["tifffile >= 2025.5.21", "zarr >= 3.0.8"]
openslide = ["openslide-python >= 1.1.1"]

[project.urls]
Repository = "https://github.com/stefano-malacrino/wsi-reader"